--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -1,3 +1,6 @@
 -
   filename: 'game-hacking-1'
   lastmod: '2020-08-26 23:32:41 +0900'
+-
+  filename: 'java-1'
+  lastmod: '2020-08-28 16:10:44 +0900'
