--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -4,3 +4,6 @@
 -
   filename: 'game-hacking-2'
   lastmod: '2020-08-28 20:52:36 +0900'
+-
+  filename: 'spring-core-1'
+  lastmod: '2020-09-13 21:19:46 +0900'
